    ALLIES: ALlies low health, allies low armor, very low health (self), surrounded
    VARIANT: VARIANT low health (yes it's the only parameter)
For Strength light:
    SELF/VARIANT: Low health, Very low health, low armor, surrounded
    ALLIES: Allies low health, self very low health, allies low armor, surrounded
For frost light:
    ALL: Low health, very low health, surrunded, low armor, Frost conditions (for exmaple, frost conditions+low health triggers)
    ENEMIES: Self Very low health, Allies low health, frost conditions, ally low armor,  self low armor, surrounded
    SELF: Low health, very low health, surrounded low armor, frost conditions
    ALLIES: Allies low health, very low health (self),  frost conditions, allies low armor, surrounded.
For Earthen light:
    VARIANT: Ally low health, very low health self, earthen conditions, surrounded
    ENEMIES: same as VARIANT (the weights vary tho)
    SELF: Very low health, low health, surrounded, earthen conditions
    ALLIES: Ally low health, self very low health, earthen conditions, surrounded (again, weights vary)
For Wind light:
    VARIANT: TODO subject to change: Very low health, surrounded, falling from a small height, falling from a higher height, wind conditions
    SELF: Low health, Very low health, big fall, small fall, wind conditins, surrounded
    ALLIES: allies low health, self very low health, surrounded, self falling (10 blocks), wind conditions, allies falling (20 blocks TODO maybe change),
For Aqua light:
    ALL: very low health, low armor, surrounded, aqua conditions
    ENEMIES: very low health, low health, low armor, surrounded, aqua conditions
    SELF: very low health, low health, low armor, surrounded, aqua conditions
    ALLIES: allies low health, self very low health, surrounded, low armor, aqua conditions
For Frog light: quite low health/surrounded (one of the two)

Frost light:
